[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/actors/mario/particles/recolorable_sparkles.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/objects/checkpoint/checkpoint.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/objects/checkpoint/use.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/mario/particles/red_sparkles.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 42 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 21.0
height = 42.0

[node name="Checkpoint" type="Node2D"]
z_index = 1
script = ExtResource( 2 )
normal_sparkles = ExtResource( 1 )
used_sparkles = ExtResource( 4 )

[node name="Rotation" type="Node2D" parent="."]
scale = Vector2( 0.5, 1 )

[node name="RotationRight" type="Node2D" parent="Rotation"]

[node name="Particles" type="CPUParticles2D" parent="Rotation/RotationRight"]
material = SubResource( 1 )
position = Vector2( 0, -48 )
amount = 24
local_coords = false
draw_order = 1
texture = ExtResource( 1 )
gravity = Vector2( 0, -9.8 )
anim_speed = 1.5

[node name="RotationLeft" type="Node2D" parent="Rotation"]

[node name="Particles" type="CPUParticles2D" parent="Rotation/RotationLeft"]
material = SubResource( 1 )
position = Vector2( 0, -48 )
amount = 24
local_coords = false
draw_order = 1
texture = ExtResource( 1 )
gravity = Vector2( 0, -9.8 )
anim_speed = 1.5

[node name="UseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="UseArea"]
shape = SubResource( 3 )

[node name="Use" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -11.0
bus = "Sounds"

[node name="EditorArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditorArea"]
shape = SubResource( 4 )
